--- a/M2W6D4-capstone/Capstone.Tests/Capstone.Tests.csproj
+++ b/M2W6D4-capstone/Capstone.Tests/Capstone.Tests.csproj
@@ -53,7 +53,17 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CampgroundSqlDALTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ParkSqlDALTests.cs" />
+    <Compile Include="ReservationSqlDALTests.cs" />
+    <Compile Include="SiteSqlDALTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Capstone\Capstone.csproj">
+      <Project>{a715d926-a478-4098-a01c-d7d241f4fbf0}</Project>
+      <Name>Capstone</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
