--- a/M2W6D4-capstone/Capstone/Capstone.csproj
+++ b/M2W6D4-capstone/Capstone/Capstone.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CapstoneCLI.cs" />
     <Compile Include="DAL\CampGroundSqlDAL.cs" />
     <Compile Include="DAL\ParkSqlDAL.cs" />
     <Compile Include="DAL\ReservationSqlDAL.cs" />
